Missing driver bone target doesn't mark driver as invalid #119523

Closed
opened 2024-03-15 15:32:48 +01:00 by Demeter Dzadik · 3 comments
Member

Blender Version
Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-03-14 23:27, hash: 2e6a8ae49c1c
Worked: I think never.

Short description of error

  • File with some examples of invalid drivers: invalid_drivers_think_they_are_valid.blend
  • One of these drivers, on the bone called "Missing Bone Target" has a driver with a bone selected which later got deleted.
  • I think this should be marked as invalid, since this driver should be failing to evaluate now.
  • Instead, the driver evaluates by falling back to the Armature object, which I think is very bad since it completely undermines user intent. If user wanted to use the armature, they wouldn't have specified a bone that doesn't exist.
**Blender Version** Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-03-14 23:27, hash: `2e6a8ae49c1c` Worked: I think never. **Short description of error** - File with some examples of invalid drivers: [invalid_drivers_think_they_are_valid.blend](/attachments/1f599525-1843-4b53-a4a5-5394e34c3f72) - One of these drivers, on the bone called "Missing Bone Target" has a driver with a bone selected which later got deleted. - I think this should be marked as invalid, since this driver should be failing to evaluate now. - Instead, the driver evaluates by falling back to the Armature object, which I think is very bad since it completely undermines user intent. If user wanted to use the armature, they wouldn't have specified a bone that doesn't exist.
Demeter Dzadik added the
Status
Needs Triage
Priority
Normal
Type
Report
labels 2024-03-15 15:32:49 +01:00
Iliya Katushenock added the
Interest
Animation & Rigging
label 2024-03-15 15:40:54 +01:00
Member

Can confirm the behavior (also sounds strange to me), will put up a possible PR shortlly.

Can confirm the behavior (also sounds strange to me), will put up a possible PR shortlly.
Philipp Oeser added
Status
Confirmed
Module
Animation & Rigging
and removed
Status
Needs Triage
labels 2024-03-15 18:07:48 +01:00
Philipp Oeser self-assigned this 2024-03-15 18:07:53 +01:00
Member

Possible fix is up, see !119533

Possible fix is up, see !119533
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-03-18 12:49:00 +01:00
Author
Member

Thanks a lot for this!

Thanks a lot for this!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#119523
No description provided.